--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>¡Saludos, comunidad AuJ!</h1>
     <br>
     <p>Me apasiona el desarrollo de software y las crecientes tecnologías de Inteligencia Artificial.</p>
-    <p>Estoy entusiasmado por encaminar mi carrera hacia estas áreas, mientras contribuyo a quienes me acompañen en este camino de crecimiento y aprendizaje.</p>
+    <p>En este momento me siento más cómodo trabajando en frontend, mas cuentan conmigo si hace falta una mano extra en otras áreas, pues eventualmente quiero desempeñarme como fullstack.</p>
     <p>¡Espero colaborar y construir algo increíble juntos!</p>
     <br>
     <button id="greet-btn">Continuar</button>
