Ajustes de salto de línea

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>¡Saludos, comunidad AuJ!</h1>
     <br>
-    <p>Me apasiona el desarrollo de software y las crecientes tecnologías de Inteligencia Artificial.</p>
-    <p>En este momento me siento más cómodo trabajando en frontend, mas cuentan conmigo si hace falta una mano extra en otras áreas, pues eventualmente quiero desempeñarme como fullstack.</p>
+    <p>Me apasiona el desarrollo de software <br> y las crecientes tecnologías de Inteligencia Artificial.</p>
+    <p>En este momento me siento más cómodo trabajando en frontend, <br> mas cuentan conmigo si hace falta una mano extra en otras áreas, <br> pues eventualmente quiero desempeñarme como fullstack.</p>
     <p>¡Espero colaborar y construir algo increíble juntos!</p>
     <br>
     <button id="greet-btn">Continuar</button>
